<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="2dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textview_input"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:textSize="40sp"
        tools:text="19541818" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="1dp"
        android:backgroundTint="@color/red_very_light"
        android:onClick="onClear"
        android:text="@string/clear"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_seven"
            style="@style/digit_button"
            android:onClick="onDigit"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button_eight"
            style="@style/digit_button"
            android:onClick="onDigit"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button_nine"
            style="@style/digit_button"
            android:onClick="onDigit"
            android:text="@string/_9" />

        <Button
            android:id="@+id/button_divide"
            style="@style/operator_button"
            android:onClick="onOperator"
            android:text="@string/division_operator" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_four"
            style="@style/digit_button"
            android:onClick="onDigit"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button_five"
            style="@style/digit_button"
            android:onClick="onDigit"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button_six"
            style="@style/digit_button"
            android:onClick="onDigit"
            android:text="@string/_6" />

        <Button
            android:id="@+id/button_multiply"
            style="@style/operator_button"
            android:onClick="onOperator"
            android:text="@string/multiplication_operator" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_one"
            style="@style/digit_button"
            android:onClick="onDigit"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button_two"
            style="@style/digit_button"
            android:onClick="onDigit"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button_three"
            style="@style/digit_button"
            android:onClick="onDigit"
            android:text="@string/_3" />

        <Button
            android:id="@+id/button_subtract"
            style="@style/operator_button"
            android:onClick="onOperator"
            android:text="@string/subtraction_operator" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_zero"
            style="@style/digit_button"
            android:onClick="onDigit"
            android:text="@string/_0" />

        <Button
            android:id="@+id/button_decimal"
            style="@style/operator_button"
            android:onClick="onDecimal"
            android:text="@string/dot" />

        <Button
            android:id="@+id/button_add"
            style="@style/operator_button"
            android:onClick="onOperator"
            android:text="@string/plus_operator" />

        <Button
            android:id="@+id/button_equal"
            style="@style/operator_button"
            android:backgroundTint="#dae6f0"
            android:onClick="onEqual"
            android:text="@string/equal_operator" />

    </LinearLayout>

</LinearLayout>